# ROS_RobotIgniteAcademy

./: README.md
ROS_Basics_In_5_Days/Winter_Break/: laser.bag
ROS_Basics_In_5_Days/Winter_Break/my_custom_srv_msg_pkg/: CMakeLists.txt
ROS_Basics_In_5_Days/Winter_Break/my_custom_srv_msg_pkg/launch/: call_bb8_move_custom_service_server.launch  start_bb8_move_custom_service_server.launch
ROS_Basics_In_5_Days/Winter_Break/my_custom_srv_msg_pkg/src/: bb8_move_custom_service_server.py  call_bb8_move_custom_service_server.py  custom_service_server.py
ROS_Basics_In_5_Days/Winter_Break/my_custom_srv_msg_pkg/srv/: MyCustomServiceMessage.srv
ROS_Basics_In_5_Days/actions_quiz/: CMakeLists.txt  package.xml
ROS_Basics_In_5_Days/actions_quiz/launch/: action_custom_msg.launch
ROS_Basics_In_5_Days/actions_quiz/src/: action_custom_msg_server.py
ROS_Basics_In_5_Days/drone_action_server/: CMakeLists.txt
ROS_Basics_In_5_Days/logger_example_pkg/: package.xml
ROS_Basics_In_5_Days/my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
ROS_Basics_In_5_Days/my_package/: simple.py
ROS_Basics_In_5_Days/odometry_package/: package.xml
ROS_Basics_In_5_Days/python_service_bb8/: CMakeLists.txt
ROS_Basics_In_5_Days/service_quiz/: package.xml
ROS_Control/my_controller/: CMakeLists.txt
ROS_Control/my_robot_control/: package.xml
ROS_Control/quiz_control/: CMakeLists.txt  controller_plugins.xml  package.xml
TF/: frames.gv
TF/broadcaster/: CMakeLists.txt  package.xml
TF/robot_state_publisher/: CMakeLists.txt  package.xml
TF/tf_quiz_static_transform/: CMakeLists.txt  (+1 more)
(+165 files in other folders)
