<?xml version="1.0"?>
<package format="2">
  <name>actions_quiz</name>
  <version>0.0.0</version>
  <description>The package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <!-- <build_depend>actions_quiz</build_depend> -->
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>